--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -31,7 +31,7 @@
   tags:
     - rhbase
     - install
-  when: rhbase_kt_managed == "true" 
+  when: rhbase_kt_managed == true
 
 - name: Install | Role/Ansible dependencies
   package:
