--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,10 @@
-# roles/rhbase/tasks/main.yml
 ---
 
-- include_vars: "{{ item }}"
+- name: Gather variables for each operating system
+  include_vars: "{{ item }}"
   with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    - "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
     - "{{ ansible_distribution }}.yml"
     - "{{ ansible_os_family }}.yml"
   tags: rhbase
