--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,5 +14,5 @@
 - include_tasks: services.yml # Start/stop basic services
 - include_tasks: security.yml # Security settings
 - include_tasks: users.yml    # Create users
-# - include_tasks: admin.yml    # Admin user (a.o. SSH key)
+- include_tasks: admin.yml    # Admin user (a.o. SSH key)
 
