--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -9,6 +9,13 @@ rhbase_dependencies:
   - libselinux-python
   - libsemanage-python
   - firewalld
+  - dbus-python
+  - tmux
+  - net-tools
+  - tcpdump 
+  - rsync
+  - rsyslog 
+  
 
 rhbase_package_manager: yum
 rhbase_package_manager_configuration: /etc/yum.conf
