--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -9,6 +9,11 @@ rhbase_dependencies:
   - python3-libselinux
   - python3-policycoreutils
   - firewalld
+  - tmux
+  - net-tools
+  - tcpdump 
+  - rsync
+  - rsyslog
 
 rhbase_package_manager: dnf
 rhbase_package_manager_configuration: /etc/yum.conf
