Oracle Linux additions

--- a/vars/OracleLinux-8.yml
+++ b/vars/OracleLinux-8.yml
@@ -6,17 +6,14 @@ rhbase_systemd_services:
   - systemd-tmpfiles-setup
 
 rhbase_dependencies:
-  - libselinux-python
-  - libsemanage-python
-  - policycoreutils-python
+  - python3-libselinux
+  - python3-policycoreutils
   - firewalld
-  - dbus-python
   - tmux
   - net-tools
   - tcpdump 
   - rsync
-  - rsyslog 
-  
+  - rsyslog
 
-rhbase_package_manager: yum
+rhbase_package_manager: dnf
 rhbase_package_manager_configuration: /etc/yum.conf
