--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -1,6 +1,3 @@
-# roles/rhbase/tasks/admin.yml
-#
-# Settings regarding the admin user
 ---
 - name: Admin | Add task runners group
   group:
@@ -38,6 +35,7 @@
     user: taskrunner
     key: "{{ rhbase_taskrunner_key }}"
     exclusive: True
+  when: rhbase_taskrunner_key is defined  
   tags:
     - rhbase
     - admin
