--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -8,7 +8,7 @@
   lineinfile:
     dest: /etc/hosts
     state: present
-    line: "{{ ansible_all_ipv4_addresses|last }} {{ ansible_hostname }}.{{ ansible_domain }} {{ ansible_hostname }}"
+    line: "{{ ansible_host }} {{ ansible_hostname }}.{{ ansible_domain }} {{ ansible_hostname }}"
     regexp: "{{ ansible_hostname }}"
   when: rhbase_hosts_entry
   tags:
