--- a/vars/Rocky-9.yml
+++ b/vars/Rocky-9.yml
@@ -13,6 +13,12 @@ rhbase_dependencies:
   - tcpdump 
   - rsync
   - rsyslog
+  - bash-completion
 
 rhbase_package_manager: dnf
 rhbase_package_manager_configuration: /etc/yum.conf
+
+rhbase_defaultrepos:
+  - baseos
+  - appstream
+  - extras
