--- a/vars/OracleLinux-7.yml
+++ b/vars/OracleLinux-7.yml
@@ -17,6 +17,6 @@ rhbase_dependencies:
   - rsyslog
   - bash-completion
   
-
+rhbase_defaultrepofiles: []
 rhbase_package_manager: yum
 rhbase_package_manager_configuration: /etc/yum.conf
