--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -14,6 +14,8 @@ rhbase_dependencies:
   - rsync
   - rsyslog
   - bash-completion  
-
+  - NetworkManager-libnm
+  - nm-connection-editor
+rhbase_defaultrepofiles: []
 rhbase_package_manager: dnf
 rhbase_package_manager_configuration: /etc/yum.conf
